# Shapleypy

./: NEWS  README.md  WORKFLOW.md  environment.yml  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  test-master.yml  test.yml
src/shapleypy/: __about__.py  _typing.py  classes_checkers.py  coalition.py  constants.py  game.py  generators.py  loaders.py  normalization.py  protocols.py  savers.py
src/shapleypy/classes/: checkers.py
src/shapleypy/solution_concept/: __init__.py  _default_value.py  banzhaf_value.py  core.py  shapley_value.py
tests/: test_banzhaf_value.py  test_classes_checkers.py  test_coalition.py  test_core.py  test_game.py  test_generators.py  test_loaders.py  test_normallization.py  test_save_and_load.py  test_savers.py  test_shapley_value.py
tests/input_data/csv/: basic_game_of_three.csv  missing_n.csv  missing_values.csv  partial_values.csv
tests/input_data/json/: basic_game_of_three.json  empty_values.json  missing_n.json  missing_values.json  partial_values.json
